fix overflow-x on home page with @media css

--- a/styles/home.css
+++ b/styles/home.css
@@ -101,16 +101,16 @@ a.rounded-circle {
     }
 }
 
-/* Medium devices (tablets, 768px) */
-@media (max-width: 768px) {
+/* Medium devices (tablets, and smaller monitors 900px) */
+@media (max-width: 900px) {
     main > #day-plans {
         grid-template-columns: auto auto;
         grid-template-areas: 'day-0 day-0' 'day-1 day-2' 'day-3 day-4' 'day-5 day-6';
     }
 }
 
-/* Extra large devices (large desktops, 1200px) */
-@media (max-width: 1200px) {
+/* Extra large devices (large desktops, 901px+) */
+@media (min-width: 901px) {
     #day-plans {
         grid-template-columns: auto auto auto;
         grid-template-areas: '. day-0 .'
